# missinglink

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Dockerfile  README.md  Vagrantfile  main.cpp  setup_ubuntu1604.sh
cmake_includes/: chip_toolchain.cmake
include/: GPIO.hpp
init/: missing-link
init_scripts/: ml-display  ml-startup
src/: gpio.cpp  gpio.hpp  main.cpp
src/display/: ht16k33.c  ht16k33.h  i2c.c  i2c.h  main.cpp  oled.c  oled.h
src/gpio/: FilemappedPin.cpp  FilemappedPin.hpp  gpio_types.hpp
src/missing_link/: common.h  control.cpp  control.hpp  display.cpp  display.hpp  engine.cpp  engine.hpp  file.cpp  file.hpp  file_io.cpp  file_io.hpp  gpio.cpp  gpio.hpp  hw_defs.h  io.cpp  io.hpp  io_expander.cpp  io_expander.hpp  led_driver.cpp  led_driver.hpp  link_engine.cpp  link_engine.hpp  main.cpp  midi_in.cpp  midi_in.hpp  midi_out.cpp  midi_out.hpp  missinglink_common.hpp  output.cpp  output.hpp  pin_defs.hpp  settings.cpp  settings.hpp  system_info.cpp  system_info.hpp  tap_tempo.cpp  tap_tempo.hpp  types.hpp  user_interface.cpp  user_interface.hpp  (+4 more)
src/missing_link_display/: ht16k33.c  i2c.c  i2c.h  main.c
test/: test_Pin.cpp  test_SysfsMappedPin.cpp  test_SysfsPin.cpp  test_dummy.cpp
